<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.namelessmc</groupId>
	<artifactId>plugin</artifactId>
	<version>2.2.0-beta</version>

	<name>Nameless-Plugin</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<finalName>${project.name}-${project.version}</finalName>

		<resources>
			<resource>
				<directory>resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>

					<relocations>
						<relocation>
							<pattern>com.google.gson</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.gson</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.google.common</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.guava</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.namelessmc.java_api</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.nameless_api</shadedPattern>
						</relocation>
						<relocation>
							<pattern>net.md_5.bungee.config</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.bungee-config</shadedPattern>
						</relocation>
						<relocation>
							<pattern>net.kyori</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.kyori</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.apache.commons.lang3</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.commons_lang3</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.apache.commons.io</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.commons_io</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.checkerframework</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.checkerframework</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.intellij.lang.annotations</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.intellij-annotations</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.jetbrains.annotations</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.jetbrains-annotations</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.slf4j</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.slf4j</shadedPattern>
						</relocation>
						<relocation>
							<pattern>xyz.derkades.derkutils</pattern>
							<shadedPattern>com.namelessmc.plugin.lib.derkutils</shadedPattern>
						</relocation>
					</relocations>

					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>com.namelessmc</groupId>
			<artifactId>java-api</artifactId>
			<version>canary</version>
		</dependency>

		<dependency>
			<groupId>xyz.derkades</groupId>
			<artifactId>Derkutils</artifactId>
			<version>legacy</version>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>1.18-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.9.0</version>
		</dependency>

		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-text-minimessage</artifactId>
			<version>4.10.1</version>
		</dependency>

		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-platform-bukkit</artifactId>
			<version>4.1.0</version>
		</dependency>

		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-platform-bungeecord</artifactId>
			<version>4.1.0</version>
		</dependency>

		<dependency>
			<groupId>eu.kennytv.maintenance</groupId>
			<artifactId>maintenance-api</artifactId>
			<version>4.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency>
			<groupId>com.velocitypowered</groupId>
			<artifactId>velocity-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-config</artifactId>
			<version>1.16-R0.4</version>
		</dependency>

	</dependencies>

	<repositories>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>

		<repository>
			<id>velocity</id>
			<url>https://nexus.velocitypowered.com/repository/maven-public/</url>
		</repository>

	</repositories>

</project>
